--- a/django_project/TravelExperienceApp/templates/TravelExperienceApp/post_form.html
+++ b/django_project/TravelExperienceApp/templates/TravelExperienceApp/post_form.html
@@ -5,8 +5,9 @@
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Blog Post</legend>
+                <legend class="border-bottom mb-4">Add Post</legend>
                 {{ form|crispy }}
+<!--                {{ form.media }}-->
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Post</button>
