--- a/django_project/TravelExperienceApp/templates/TravelExperienceApp/user_posts.html
+++ b/django_project/TravelExperienceApp/templates/TravelExperienceApp/user_posts.html
@@ -1,6 +1,7 @@
 {% extends "TravelExperienceApp/base.html" %}
 {% block content %}
-    <h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+    <p> All posts by {{ view.kwargs.username }} - ({{ page_obj.paginator.count }})</p>
+    <br/>
     {% for post in posts %}
         <article class="media content-section">
           <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
