--- a/django_project/TravelExperienceApp/templates/TravelExperienceApp/base.html
+++ b/django_project/TravelExperienceApp/templates/TravelExperienceApp/base.html
@@ -2,8 +2,6 @@
 <!DOCTYPE html>
 <html>
    <head>
-
-
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,7 +9,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'TravelExperienceApp/main.css' %}">
-
 
       {% if title %}
       <title>{{ title }}</title>
@@ -21,7 +18,6 @@
 
    </head>
    <body>
-
 
    <header class="site-header">
      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -42,20 +38,11 @@
              <a class="nav-item nav-link" href="/about">About</a>
              <a class="nav-item nav-link" href="/contact">Contact</a>
 
-<!--             {% if user.is_authenticated %}-->
-<!--                <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>-->
-<!--                <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>-->
-<!--                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>-->
-<!--             {% else %}-->
-<!--                 <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>-->
-<!--                 <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>-->
-<!--             {% endif %}-->
-
            </div>
            <!-- Navbar Right Side -->
            <div class="navbar-nav">
              {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
+                <a class="nav-item nav-link" href="{% url 'post-create' %}">Add New Post</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">My Profile</a>
 
 
